button text color and outline were changed to match wireframes

--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -91,3 +91,9 @@ header {
   flex-basis: 100%;
   height: 0;
 }
+
+.btn-black-text-and-outline {
+  color: $epa-dark-gray !important;
+  border-color: $epa-dark-gray !important;
+  box-shadow: inset 0 0 0 2px $epa-dark-gray !important;
+}
