--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -12,4 +12,5 @@ $epa-red: #950000;
 $epa-navy: #808080;
 $epa-darkslate-blue: #365b8f;
 $epa-gray: #ccc;
+$epa-dark-gray: #666;
 $epa-generic-font-family: "Public Sans", sans-serif;
