button text color and outline were changed to match wireframes

--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -93,7 +93,7 @@ header {
 }
 
 .btn-black-text-and-outline {
-  color: $epa-dark-gray !important;
-  border-color: $epa-dark-gray !important;
-  box-shadow: inset 0 0 0 2px $epa-dark-gray !important;
+  color: $epa-black !important;
+  border-color: $epa-black !important;
+  box-shadow: inset 0 0 0 2px $epa-black !important;
 }
