Moved Login button and related functionality from LeftNavigation.js to SubHeader.js Moved Logout button and updated formatting within SubHeader.js

--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -35,9 +35,9 @@ body {
   line-height: 2.5em;
   text-align: center;
   border-radius: 50%;
-  background: $epa-info-base;
+  background: white;
   vertical-align: top;
-  color: white;
+  color: $epa-darkslate-blue;
   margin: -0.25em;
 }
 
