Addressing Pull Request feedback

--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -35,7 +35,7 @@ body {
   line-height: 2.5em;
   text-align: center;
   border-radius: 50%;
-  background: white;
+  background: $epa-white;
   vertical-align: top;
   color: $epa-darkslate-blue;
   margin: -0.25em;
