Updates to color, position, and format of buttons

--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -37,7 +37,7 @@ body {
   border-radius: 50%;
   background: $epa-white;
   vertical-align: top;
-  color: $epa-darkslate-blue;
+  color: $epa-blue-base;
   margin: -0.25em;
 }
 
