--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -13,4 +13,5 @@ $epa-navy: #808080;
 $epa-darkslate-blue: #365b8f;
 $epa-gray: #ccc;
 $epa-dark-gray: #666;
+$epa-darker-gray: #565C65;
 $epa-generic-font-family: "Public Sans", sans-serif;
