--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -6,7 +6,7 @@
 }
 
 .tab-button {
-  color: $epa-disabled-dark;
+  color: $epa-darker-gray;
   cursor: pointer;
   font-weight: bold;
   width: 15em !important;
