--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -23,5 +23,5 @@
   border-bottom: 0.25em solid $epa-blue-base;
   color: $epa-blue-base;
   cursor: default;
-  outline: none !important;
+  // outline: none !important;
 }
