aria-live region for countdown (rf-4) and titles with context for pencil/lock icons (rf-6)

--- a/public/assets/css/codeeffects/common.css
+++ b/public/assets/css/codeeffects/common.css
@@ -290,3 +290,9 @@ div.ceRule {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
 }
+
+#hide-from-view {
+  position: absolute !important;
+  top: -9999px !important;
+  left: -9999px !important;
+}
