--- a/src/components/HeaderInfo/HeaderInfo.scss
+++ b/src/components/HeaderInfo/HeaderInfo.scss
@@ -1,3 +1,24 @@
 .header {
-    min-width: 100%  //This will make container to take screen width
-  }
+  min-width: 100%; //This will make container to take screen width
+}
+
+.unstyled-btn {
+  color: black;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: none;
+}
+
+.unstyled-btn:focus {
+  outline: none !important;
+}
+
+.hyperlink-btn {
+  color: #005ea2;
+  text-decoration: underline;
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
