--- a/src/components/HeaderInfo/HeaderInfo.scss
+++ b/src/components/HeaderInfo/HeaderInfo.scss
@@ -8,7 +8,7 @@
   outline: none;
   border: none;
   background-color: transparent;
-  cursor: none;
+  pointer-events: none;
 }
 
 .unstyled-btn:focus {
