--- a/src/components/AboutHome/AboutHome.scss
+++ b/src/components/AboutHome/AboutHome.scss
@@ -27,3 +27,7 @@ h4, .h4, .box--alert>.box__title, .box--blog>.box__title, .box--highlight>.box__
 .viewAboutBTN{
     color:black !important;
 }
+
+.forceUnderlineText{
+    text-decoration:underline !important;
+}
