added color contrast

--- a/src/components/AboutHome/AboutHome.scss
+++ b/src/components/AboutHome/AboutHome.scss
@@ -31,3 +31,6 @@ h4, .h4, .box--alert>.box__title, .box--blog>.box__title, .box--highlight>.box__
 .forceUnderlineText{
     text-decoration:underline !important;
 }
+.colorContrast{
+    color:#6161FF !important;
+}
