--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -1,11 +1,12 @@
 // *** import google fonts
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto");
 
 @import "/variables";
 
 body {
-  font-family: $epa-generic-font-family;
+  font-family: $epa-generic-font-family !important;
 }
 
 .hour-input {
