--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -1,3 +1,9 @@
+/* _variables.scss
+ *    Contains all variables used throughout this project.
+ *
+ *    NOTE: to avoid duplication of variables, please keep them in alphabetical order
+ *
+ */
 $epa-bg-secondary-darker: linear-gradient(to bottom, #520001 0%, #6c0810 100%);
 $epa-black: #000;
 $epa-blue-base: #005ea2;
