initial work started

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,7 +2,7 @@
 /***** MAIN SOURCE stylesheet *****/
 @import "~uswds/dist/scss/uswds";
 
-/***** GLOBAL VARIABLES (scss values used througout the app) *****/
+/***** GLOBAL VARIABLES (scss values used throughout the app) *****/
 @import "../../additional-scss/variables";
 
 /***** APP SCOPE main source overrides *****/
