complete; testing pending

--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -98,3 +98,7 @@ header {
   border-color: $epa-black !important;
   box-shadow: inset 0 0 0 2px $epa-black !important;
 }
+
+h2 {
+  font-size: 40px;
+}
