--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -19,6 +19,7 @@ $epa-navy: #808080;
 $epa-off-white: #f0f0f0;
 $epa-primary-dark: #1a4480;
 $epa-red: #950000;
+$epa-spiderweb: #dee2e6;
 $epa-teal: #6161ff;
 $epa-white: #fff;
 $epa-yellow: #f7b801;
