--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,3 +1,5 @@
+@import "../../additional-scss/variables";
+
 .modal-wrapper {
   position: absolute;
   z-index: 500;
@@ -5,6 +7,11 @@
   box-shadow: 0px -2px 22px -6px rgba(60, 55, 61, 0.37),
     -10px 10px 22px -6px rgba(60, 55, 61, 0.37);
   border-radius: 1% !important;
+  background: $epa-white;
+
+  h2 {
+    font-size: 32px;
+  }
 }
 
 .modal-color {
