--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -356,7 +356,8 @@
   color: $epa-black;
 }
 
-#logoutBtn {
+#logoutBtn,
+#openModalBTN {
   border-radius: 0.25em !important;
   color: $epa-white !important;
 }
