--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -11,7 +11,6 @@
   font-weight: bold;
   width: 15em !important;
   height: 3em !important;
-  padding-top: 0.25em !important;
 }
 
 .ellipsis-text {
@@ -21,6 +20,9 @@
   white-space: nowrap;
   min-height: 2em;
   margin-top: 0.15em;
+  display: inline-flex !important;
+  align-items: center !important;
+  justify-content: center !important;
 }
 
 .active-tab-button {
