--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -16,6 +16,7 @@ $epa-gray: #ccc;
 $epa-green: #008000;
 $epa-info-base: #00bde3;
 $epa-navy: #808080;
+$epa-light-blue: #0071bc;
 $epa-off-white: #f0f0f0;
 $epa-primary-dark: #1a4480;
 $epa-red: #950000;
