--- a/src/components/ReportingInstructions/ReportingInstructions.scss
+++ b/src/components/ReportingInstructions/ReportingInstructions.scss
@@ -1,3 +1,5 @@
-a.text-primary:hover {
-  color: #007bff !important;
+.reporting-instructions {
+  a.text-primary:hover {
+    color: #007bff !important;
+  }
 }
