fixed styling in the app as requested in the ticket

--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -9,8 +9,9 @@
   color: $epa-darker-gray;
   cursor: pointer;
   font-weight: bold;
-  width: 15em !important;
-  height: 3em !important;
+  width: 15.5em !important;
+  height: 3.2em !important;
+  padding-bottom: 0.2em;
 }
 
 .ellipsis-text {
