Updated colors for the Initials box in the SubHeader menu

--- a/src/additional-scss/_global-styles.scss
+++ b/src/additional-scss/_global-styles.scss
@@ -36,8 +36,8 @@
   line-height: 2.5em;
   text-align: center;
   border-radius: 50%;
-  background: $epa-info-base;
-  color: $epa-white;
+  background: $epa-white;
+  color: $epa-blue-base;
   vertical-align: top;
   margin: -0.25em;
 }
