--- a/src/components/ImportModal/ImportModal.scss
+++ b/src/components/ImportModal/ImportModal.scss
@@ -7,4 +7,15 @@
   .has-invalid-file {
     border-color: $epa-red !important;
   }
+  #import-file-name-text {
+    margin-right: 0.5rem;
+  }
+  .usa-form-group {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  p {
+    margin-top: 0 !important;
+    margin-bottom: 0.5rem !important;
+  }
 }
