more styling updates

--- a/src/components/ImportModal/ImportModal.scss
+++ b/src/components/ImportModal/ImportModal.scss
@@ -14,7 +14,7 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
   }
-  p {
+  #fileName {
     margin-top: 0 !important;
     margin-bottom: 0.5rem !important;
   }
