--- a/src/components/ImportModal/ImportModal.scss
+++ b/src/components/ImportModal/ImportModal.scss
@@ -18,4 +18,7 @@
     margin-top: 0 !important;
     margin-bottom: 0.5rem !important;
   }
+  .usa-file-input__preview-heading {
+    background-color: $epa-white !important;
+  }
 }
