--- a/src/components/AboutHome/AboutHome.scss
+++ b/src/components/AboutHome/AboutHome.scss
@@ -12,7 +12,7 @@
 
   .main-content {
     h2 {
-      font-size: 39px;
+      font-size: 2.44rem;
       font-weight: bold;
     }
   }
@@ -21,7 +21,7 @@
   .monitor-plan-content,
   .qa-certification-content {
     h3 {
-      font-size: 31px;
+      font-size: 1.95rem;
       font-weight: bold;
     }
 
