added scroll up func to coming soon comp, fixed color contrast for homepage links, and finished content for resources and reporting instructions pages

--- a/src/components/ReportingInstructions/ReportingInstructions.scss
+++ b/src/components/ReportingInstructions/ReportingInstructions.scss
@@ -1,5 +1,10 @@
 .reporting-instructions {
-  a.text-primary:hover {
-    color: #007bff !important;
+  h2 {
+    font-size: 2.44rem;
+    font-weight: bold;
+  }
+  h3 {
+    font-size: 1.95rem;
+    font-weight: bold;
   }
 }
