--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -45,6 +45,7 @@ div.row.column1 {
   padding: 8px;
   transform: translateY(-100%);
   transition: transform 0.3s;
+  z-index: 99999;
 }
 
 .skip-to-content-link:focus {
