--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -4,6 +4,9 @@
  *    NOTE: to avoid duplication of variables, please keep them in alphabetical order
  *
  */
+$eds-accent-cool: #00bde3;
+$eds-accent-cool-hover: #28a0cb;
+$eds-accent-cool-active: #07648d;
 $epa-bg-secondary-darker: linear-gradient(to bottom, #520001 0%, #6c0810 100%);
 $epa-black: #000;
 $epa-blue-base: #005ea2;
