changed text color of homepage btns during hover state to black

--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -424,7 +424,7 @@ button.usa-nav__close {
   }
   &:hover {
     background-color: $eds-accent-cool-hover;
-    color: $epa-white;
+    color: $epa-black;
   }
   &:active {
     background-color: $eds-accent-cool-active;
