fix(_variable.scss & uploadmodal.scss): update colors for alert and disable import button
Ref #3415

--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -13,6 +13,7 @@ $epa-blue-base: #005ea2;
 $epa-darkslate-blue: #365b8f;
 $epa-dark-gray: #666;
 $epa-darker-gray: #565c65;
+$epa-gray-4: #71767A;
 $epa-disabled-dark: #adadad;
 $epa-generic-font-family: "Source Sans Pro", sans-serif;
 $epa-gray: #ccc;
@@ -27,3 +28,4 @@ $epa-spiderweb: #dee2e6;
 $epa-teal: #6161ff;
 $epa-white: #fff;
 $epa-yellow: #f7b801;
+$epa-error-dark: #B50909;
