fix: update import button disable color and add new scss variable
Ref #3415

--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -13,8 +13,8 @@ $epa-blue-base: #005ea2;
 $epa-darkslate-blue: #365b8f;
 $epa-dark-gray: #666;
 $epa-darker-gray: #565c65;
-$epa-gray-4: #71767A;
 $epa-disabled-dark: #adadad;
+$epa-disabled-darker: #707070;
 $epa-generic-font-family: "Source Sans Pro", sans-serif;
 $epa-gray: #ccc;
 $epa-green: #008000;
