fix: update background color for import button disabled hover

--- a/src/components/UploadModal/UploadModal.scss
+++ b/src/components/UploadModal/UploadModal.scss
@@ -34,6 +34,10 @@
     cursor: default !important;
     background-color: $epa-disabled-darker;
   }
+  
+  .usa-button[disabled]:hover { 
+    background-color: $epa-disabled-darker;
+  }
 
   #cancelBtn {
     width: 15%;
