--- a/src/components/LeftNavigation/LeftNavigation.scss
+++ b/src/components/LeftNavigation/LeftNavigation.scss
@@ -1,4 +1,5 @@
- .usa-current:after {
+.leftNav {
+.usa-current:after {
     background-color: #005ea2 !important;
     border-radius: 99rem !important;
     content: "" !important;
@@ -8,6 +9,8 @@
     top: 0.25rem !important;
     width: 0.25rem !important;
     left: 0.25rem !important;
+
+}
 
 }
 
