fix: individual Configurations Tab - Workspace and Fix formatting
Ref #3533

--- a/src/additional-scss/_variables.scss
+++ b/src/additional-scss/_variables.scss
@@ -28,4 +28,4 @@ $epa-spiderweb: #dee2e6;
 $epa-teal: #6161ff;
 $epa-white: #fff;
 $epa-yellow: #f7b801;
-$epa-error-dark: #B50909;
+$epa-error-dark: #b50909;
