--- a/src/components/ModalDetails/ModalDetails.scss
+++ b/src/components/ModalDetails/ModalDetails.scss
@@ -1,10 +1,8 @@
-
-.break-line{
- 
-    display:block;
-    width:100%; /*or whatever width you want the effect of <hr>*/
-    border-top: 1px solid #ccc
+.break-line {
+  display: block;
+  width: 100%; /*or whatever width you want the effect of <hr>*/
+  border-top: 1px solid #ccc;
 }
-.backBTNColor{
-    color:grey !important;
+.backBTNColor {
+  color: grey !important;
 }
