implemented adding linearity summary test data

--- a/src/components/Accessories/Accessories.scss
+++ b/src/components/Accessories/Accessories.scss
@@ -1,4 +1,4 @@
-@import "/src/additional-scss/variables";
+@import "../../../src/additional-scss/variables";
 
 .accessoriesLinks {
   color: $epa-blue-base !important;
