--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,14 +1,19 @@
-@import "../../additional-scss/settings";
+/***** SETTINGS VARIABLES (values to be overriden before compiling scss) *****/
+@import "../../additional-scss/uswds-settings";
+
 /***** MAIN SOURCE stylesheet *****/
 @import "~uswds/dist/scss/uswds";
 
-/***** GLOBAL VARIABLES (scss values used throughout the app) *****/
+/***** GLOBAL VARIABLES (scss values used througout the app) *****/
 @import "../../additional-scss/variables";
 
 /***** APP SCOPE main source overrides *****/
 @import "../../additional-scss/uswds-global-overrides";
+
 @import "../../additional-scss/react-datatable-component-override";
+
 @import "../../additional-scss/global-styles";
+
 @import "../../additional-scss/icons";
 
 /***** ANIMATIONS *****/
