--- a/src/components/DataTableRender/DataTableRender.scss
+++ b/src/components/DataTableRender/DataTableRender.scss
@@ -5,3 +5,8 @@
   width: 100%; /*or whatever width you want the effect of <hr>*/
   border-top: 1px solid $epa-gray;
 }
+
+#datatableContainer{
+  overflow-x:auto;
+
+}
