--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -3,7 +3,8 @@
 .modal-wrapper {
   position: absolute;
   z-index: 500;
-  top: 3%;
+  top: 13%;
+  left:38%;
   box-shadow: 0px -2px 22px -6px rgba(60, 55, 61, 0.37),
     -10px 10px 22px -6px rgba(60, 55, 61, 0.37);
   border-radius: 1% !important;
