--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -390,7 +390,16 @@ button.usa-nav__close {
   cursor: pointer;
 }
 
+.modal-content {
+  pointer-events: none;
+}
+
+.modal-header {
+  pointer-events: all;
+}
+
 .modal-footer {
+  pointer-events: all;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -399,6 +408,7 @@ button.usa-nav__close {
 }
 
 .modal-body {
+  pointer-events: all;
   position: relative;
   flex: 1 1 auto;
   padding: 1rem;
