removed accidental comment

--- a/src/additional-scss/_uswds-global-overrides.scss
+++ b/src/additional-scss/_uswds-global-overrides.scss
@@ -89,7 +89,7 @@
     margin: 0;
     font-size: 2em !important;
     line-height: 2em !important;
-    //position: relative !important;
+    position: relative !important;
     top: -1em !important;
     padding: 1em 0 2em 0 !important;
     width: 100% !important;
