--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -32,7 +32,10 @@ div.row.column1 {
   transition: transform 0.3s;
   z-index: 99999;
 }
-
+#appErrorMessage {
+  color: #d10000;
+  border-color: #d10000;
+}
 .skip-to-content-link:focus {
   transform: translateY(0%);
 }
