changed icons to appear on focus

--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -39,6 +39,11 @@
       :hover:not(:focus) {
         color: $epa-black !important;
       }
+      :focus {
+        .MuiSvgIcon-root {
+          opacity: 1;
+        }
+      }
     }
     border: none !important;
   }
