--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -5,9 +5,9 @@
     width: 99%;
     margin: 0.5% 0.5%;
 
-    .epa-active-element:not(.maintainBorder) {
-      border: none !important;
-    }
+    // .epa-active-element:not(.maintainBorder) {
+    //   border: none !important;
+    // }
   }
   .rdt_TableCol_Sortable {
     color: $epa-black !important;
