Fixed color on add button focus

--- a/src/additional-scss/_react-datatable-component-override.scss
+++ b/src/additional-scss/_react-datatable-component-override.scss
@@ -30,7 +30,7 @@
       :focus {
         outline: none;
         border: solid 4px #2672de;
-        color: $epa-black !important;
+        //color: $epa-black !important;
       }
       :focus {
         .MuiSvgIcon-root {
