add styling to span displays newlines

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -36,6 +36,9 @@ div.row.column1 {
   color: #d10000;
   border-color: #d10000;
 }
+#appErrorMessageText {
+  white-space: pre-wrap;
+}
 .skip-to-content-link:focus {
   transform: translateY(0%);
 }
