add styling to ellipsis cutoff for locations display

--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -34,3 +34,11 @@
   position: relative;
   top: -1.25em !important;
 }
+
+.locations-display {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+}
