upgraded to react 18 and all other packages to latest versions

--- a/src/components/Accessories/Accessories.scss
+++ b/src/components/Accessories/Accessories.scss
@@ -1,4 +1,4 @@
-@import "../../../src/additional-scss/variables";
+@import "../../styles/variables";
 
 .accessoriesLinks {
   color: $epa-blue-base !important;
