--- a/src/components/ImportModal/ImportModal.scss
+++ b/src/components/ImportModal/ImportModal.scss
@@ -1,4 +1,4 @@
-@import "../../additional-scss/variables";
+@import "../../styles/variables";
 
 .import-modal-container {
   .usa-file-input__accepted-files-message {
