--- a/src/components/QADataTableRender/QADataTableRender.scss
+++ b/src/components/QADataTableRender/QADataTableRender.scss
@@ -1,4 +1,5 @@
-@import "../../additional-scss/variables";
+@import "../../styles/variables";
+
 .qa-table-wrapper{
   .expandBTN:hover {
     cursor: pointer;
