--- a/src/styles/_global-styles.scss
+++ b/src/styles/_global-styles.scss
@@ -1,9 +1,9 @@
-// *** import google fonts
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans");
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto");
+// // *** import google fonts
+// @import url("https://fonts.googleapis.com/css2?family=Public+Sans");
+// @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Roboto");
 
-@import "/variables";
+@import "variables";
 
 * {
   font-family: $epa-generic-font-family !important;
