--- a/src/components/EvaluateAndSubmit/TableRender/TableRender.scss
+++ b/src/components/EvaluateAndSubmit/TableRender/TableRender.scss
@@ -1,26 +1,33 @@
-  .unstyled-btn {
-    color: black;
-    text-decoration: none;
-    outline: none;
-    border: none;
-    background-color: transparent;
-    pointer-events: none;
+.unstyled-btn {
+  color: black;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  pointer-events: none;
+}
+
+.unstyled-btn:focus {
+  outline: none !important;
+}
+
+.hyperlink-btn {
+  color: #005ea2;
+  text-decoration: underline;
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
+.apply-filter-position {
+  position: absolute;
+  top: 1.8rem;
+}
+
+.evaluate-table {
+  .rdt_TableHead {
+    position: sticky !important;
+    top: 0px;
+    z-index: 1;
   }
-  
-  .unstyled-btn:focus {
-    outline: none !important;
-  }
-  
-  .hyperlink-btn {
-    color: #005ea2;
-    text-decoration: underline;
-    outline: none;
-    border: none;
-    background-color: transparent;
-  }
-  
-  .apply-filter-position{
-    position: absolute;
-    top: 1.8rem;
-  }
-  
+}
